--- a/ejercicios_practica/index.html
+++ b/ejercicios_practica/index.html
@@ -9,15 +9,15 @@
 </head>
 
 <body>
-    <img src="images/inove.jpg" height="275px" alt="inovelogo"/>
+    <img src="images/inove.jpg" height="275px" alt="inovelogo" />
     <h1>Ejercicios de práctica</h1>
 
     <!-- Ir descomentando los ejercicios a medida que los van realizando -->
     <script type="text/javascript" src="js/ejercicio_1.js"></script>
-    <!-- <script type="text/javascript" src="js/ejercicio_2.js"></script> -->
-    <!-- <script type="text/javascript" src="js/ejercicio_3.js"></script> -->
-    <!-- <script type="text/javascript" src="js/ejercicio_4.js"></script> -->
-    <!-- <script type="text/javascript" src="js/ejercicio_5.js"></script> -->
+    <script type="text/javascript" src="js/ejercicio_2.js"></script>
+    <script type="text/javascript" src="js/ejercicio_3.js"></script>
+    <script type="text/javascript" src="js/ejercicio_4.js"></script>
+    <script type="text/javascript" src="js/ejercicio_5.js"></script>
 </body>
 
 </html>
